# zbr

./: 404.html  CHANGELOG.md  Cargo.toml  LICENSE  README.md  contributing.html  dev.html  install.html  overview.html  print.html  searchindex.js  searchindex.json  usage.html
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  doc.yml  release.yml
conf/: apt-get.toml  cabal.toml  cargo.toml  conf.toml  docker.toml  gh.toml  git.toml  glab.toml  mdbook.toml  systemctl.toml  task.toml  tmux.toml
doc/: book.toml  contributing.md  dev.md  install.md  overview.md  usage.md
scripts/: conf.sh
src/: build.rs  cli.rs  init.zsh  lib.rs  main.rs  zle.rs
src/zle/: abbrev.rs  aliases.rs  compile.rs  expand.rs  extract.rs  hint.rs
