[package]
name = "zbr"
version = "0.1.0"
edition = "2024"
description = "ZSH abbreviations"
keywords = ["zsh", "abbreviations"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/zbr"
repository = "https://github.com/langston-barrett/zbr"

[dependencies]
clap = { features = ["derive"], version = "4" }
serde = { features = ["derive"], version = "1" }
thiserror = "1"
toml = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
expect-test = "1"
