[package]
name = "zbr"
version = "0.1.2"
edition = "2024"
description = "ZSH abbreviations"
keywords = ["zsh", "abbreviations"]
authors = ["Langston Barrett <langston.barrett@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/langston-barrett/zbr"
repository = "https://github.com/langston-barrett/zbr"

[lints.clippy]
dbg_macro = "warn"
explicit_iter_loop = "warn"
format_push_string = "warn"
inefficient_to_string = "warn"
needless_borrow = "warn"
needless_pass_by_value = "allow"
redundant_else = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
todo = "warn"
too_many_lines = "allow"
unimplemented = "warn"
uninlined_format_args = "warn"
use_debug = "warn"
[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
dead_code = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_debug_implementations = "warn"
missing_unsafe_on_extern = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

# https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = "fat"

# https://github.com/mstange/samply#turn-on-debug-info-for-full-stacks
[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { features = ["derive"], version = "4" }
serde = { features = ["derive"], version = "1" }
thiserror = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
expect-test = "1"
